# recon_metadata

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  metadata.rs  recon.rs
src/interface/: recon.rs
src/source/: goodreads.rs  google_books.rs  mod.rs  open_library.rs
src/sources/: adaptor.rs  google_books.rs  mod.rs  open_library.rs
src/types/: base.rs  metadata.rs  minimal.rs  mod.rs
src/util/: mod.rs  translater.rs
