[package]
name = "recon_metadata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isbn = "0.2.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.10.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
