[package]
name = "recon_metadata"
description = "A book details and metadata search library"
version = "0.1.0"
edition = "2018"
license = "MIT"
license-file = "LICENSE"
keywords = ["book", "search", "isbn", "api"]
categories = ["library"]
publish = ["crates-io"]
repository = "https://gitlab.com/CuriousCorrelation/recon_metadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isbn2 = "0.4.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.16"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.12.0"

[dev-dependencies]
